Description of the changes

--- a/Carriere/Carriere/src/main/resources/application.properties
+++ b/Carriere/Carriere/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.application.name=Authentication-service
+spring.application.name=Carriere-service
 server.port=9095
 spring.datasource.url=jdbc:postgresql://localhost:5433/My_data
 spring.datasource.username=postgres
